--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "Shiraj Ganguly",
   "license": "ISC",
   "dependencies": {
-    "jade": "^1.11.0"
+    "bluebird": "^2.9.34",
+    "jade": "^1.11.0",
+    "juice": "^1.4.2",
+    "lodash": "^3.10.1",
+    "node-sass": "^3.2.0",
+    "nodemailer": "^1.4.0"
   }
 }
